Last tweak to the footnote style to wrap up the NHS customisations for Issue #1

--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -28,7 +28,7 @@ assets/scss/_styles_project.scss
     }
 
     ol {
-        margin-top: 2rem;
-        font-size: small;
+        margin-top: 1.5rem;
+        font-size: x-small;
     }
 }
